IaC/bastion/wopr-cmdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wopr-cmdb
  name: wopr-cmdb
  namespace: bastion
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8090
#  selector:
#    app: wopr-cmdb
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: wopr-cmdb
  name: wopr-cmdb
  namespace: bastion
subsets:
  - addresses:
    - ip: 162.19.232.44
    ports:
    - port: 8090
